third_party/move/move-compiler-v2/tests/unit_test/test/fuzz_implicit.exp

Diagnostics:
error: unable to generate test
  ┌─ tests/unit_test/test/fuzz_implicit.move:6:16
  │
5 │     #[test]
  │       ---- no fuzz value source is registered; install a `FuzzValueSource` to enable implicit-fuzz #[test] expansion
6 │     public fun bare_with_signer(_a: signer) { }
  │                ^^^^^^^^^^^^^^^^ -- Corresponding to this parameter

error: unable to generate test
  ┌─ tests/unit_test/test/fuzz_implicit.move:9:16
  │
8 │     #[test]
  │       ---- no fuzz value source is registered; install a `FuzzValueSource` to enable implicit-fuzz #[test] expansion
9 │     public fun bare_with_two(_a: signer, _b: address) { }
  │                ^^^^^^^^^^^^^ -- Corresponding to this parameter

error: unable to generate test
  ┌─ tests/unit_test/test/fuzz_implicit.move:9:16
  │
8 │     #[test]
  │       ---- no fuzz value source is registered; install a `FuzzValueSource` to enable implicit-fuzz #[test] expansion
9 │     public fun bare_with_two(_a: signer, _b: address) { }
  │                ^^^^^^^^^^^^^             -- Corresponding to this parameter
